# rust-keycloak

./: Cargo.toml  README.md
examples/keycloak/: Cargo.toml
examples/keycloak/src/: main.rs
examples/realm/: Cargo.toml
examples/realm/src/: main.rs
src/: admin.rs  keycloak.rs  lib.rs  openid.rs  urls.rs
