[package]
name = "rust-keycloak"
version = "0.0.6"
description = "rust-keycloak is a Rust crate providing access to the Keycloak API."
repository = "https://github.com/tritone11/rust-keycloak"
keywords = ["keycloak", "rust"]
license = "GPL-2.0-or-later"
authors = ["tritone11", "anlumo"]
readme = "README.md"
edition = "2018"


[dependencies]
serde_json = "1.0.62"
reqwest = { version = "0.11.1", features = ["json"] }
serde_derive = "1.0.123"
serde = "1.0.123"
jsonwebtoken = "7.2.0"
