[package]
name = "rust-keycloak"
version = "0.0.7"
description = "rust-keycloak is a Rust crate providing access to the Keycloak API."
repository = "https://github.com/tritone11/rust-keycloak"
keywords = ["keycloak", "rust"]
license = "GPL-2.0-or-later"
authors = ["tritone11", "anlumo"]
readme = "README.md"
edition = "2018"


[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_derive = "1.0"
serde = "1.0"
jsonwebtoken = "7.1"
